syntax = "proto3";

package programming_lab.prolab_accounts;

option go_package = "github.com/ProgrammingLab/prolab-accounts/api;api_pb";


import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "users.proto";

service ContributionCollectionService {
  rpc ListContributionCollections (ListContributionCollectionsRequest) returns (ListContributionCollectionsResponse) {
    option (google.api.http) = {
      get: "/contribution_collections"
    };
  }
}

message ContributionCollection {
  User user = 1;
  int32 total_count = 2;
  repeated ContributionDay days = 3;
}

message ContributionDay {
  google.protobuf.Timestamp date = 1;
  int32 count = 2;
}

message ListContributionCollectionsRequest {
  int32 users_count = 1 [(validator.field) = {int_gt: -1, int_lt: 101}];
}

message ListContributionCollectionsResponse {
  repeated ContributionCollection contribution_collections = 1;
}
